Fixed bug on Android that prevented scrolls from being accepted.
Also, more robust overlay implementation; instead of ignoring pointer events, we just move the overlay offscreen

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   font-weight: 600;
-  overflow-y: hidden;
 }
 
 h1,
